# TimeSeries

./: .gitignore  README.md  TimeSeries.sln
TimeSeries/: CMakeLists.txt  Tests.cpp  Tests.h  TimeSeries.cpp  TimeSeries.h  TimeSeries.vcxproj  TimeSeries.vcxproj.filters
TimeSeries/tests/: compare1.csv  compare2.csv  compressed.csv  denseoutput.csv  diff.csv  kgtest2.csv  kstest1.csv  monotonic.csv  nonmonotonic.csv
fmt/src/: format.cc
